# mentat

./: ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  ASSESSMENT_INDEX.md  ASSESSMENT_README.md  BUILD_INSTRUCTIONS.md  CODE_DUPLICATION_ANALYSIS.md  COMPILATION_NOTES.md  Cargo.toml  ENTITY_ANALYSIS_README.md  ENTITY_SPANNED_ARCHITECTURE.md  EXAMPLE.md  EXECUTIVE_SUMMARY.md  EXPLORATION_README.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ENTITYVIEW_PATCH.md  IMPROVEMENT_PROPOSALS.md  INDEX.md  PARSER_ENTITY_ANALYSIS.md  PROJECT_ASSESSMENT.md  QUICK_REFERENCE.md  SECURITY_SUMMARY.md  SPANNED_WRAPPER_SUMMARY.md  SUMMARY.md  THREE_APPROACHES_COMPARISON.md  VISUAL_SUMMARY.md  rust-analyzer.json
core/: Cargo.toml
core-traits/: Cargo.toml  lib.rs
core-traits/tests/: serde_test.rs
db/: Cargo.toml
db-traits/: Cargo.toml  errors.rs  lib.rs
db/src/: bootstrap.rs  cache.rs  db.rs  debug.rs  metadata.rs  schema.rs  timelines.rs  tx_observer.rs
docs/: DESERIALIZATION_EXAMPLE.md  SERDE_SUPPORT.md
docs/apis/0.7/rust/src/mentat_db/: db.rs.html  debug.rs.html
edn/: Cargo.toml
edn/src/: entities.rs  lib.rs  symbols.rs  types.rs
features/: TECH_SPEC_codegen_entityview_entitypatch.md
mentat-entity/: Cargo.toml  ENTITY_CODEGEN.md  README.md
mentat-entity-derive/: Cargo.toml
mentat-entity-derive/src/: lib.rs
mentat-entity/examples/: basic_usage.rs  entity_view_patch_example.rs
mentat-entity/src/: lib.rs  read.rs
mentat-entity/tests/: entity_tests.rs  entity_view_patch_tests.rs
public-traits/: Cargo.toml  errors.rs  lib.rs
query-algebrizer/: Cargo.toml
query-algebrizer-traits/: Cargo.toml  errors.rs  lib.rs
query-algebrizer/src/: lib.rs
query-algebrizer/src/clauses/: fulltext.rs
query-projector/: Cargo.toml
query-projector-traits/: Cargo.toml  aggregates.rs  errors.rs  lib.rs
query-projector/src/: deserialize.rs  lib.rs  project.rs  pull.rs  relresult.rs
query-projector/src/projectors/: pull_two_stage.rs  simple.rs
query-projector/tests/: serde_test.rs
query-pull/: Cargo.toml
query-pull-traits/: Cargo.toml  errors.rs  lib.rs
sql/: Cargo.toml
sql-traits/: Cargo.toml  errors.rs  lib.rs
sql/src/: lib.rs
src/: conn.rs  lib.rs  query_builder.rs  store.rs  sync.rs  vocabulary.rs
tests/: entity_builder.rs  entity_tests.rs  external_test.rs  query.rs  tolstoy.rs  vocabulary.rs
tolstoy/: Cargo.toml
tolstoy-traits/: Cargo.toml  errors.rs  lib.rs
tolstoy/src/: datoms.rs  debug.rs  lib.rs  metadata.rs  remote_client.rs  schema.rs  syncer.rs  tx_mapper.rs  tx_processor.rs  tx_uploader.rs  types.rs
tools/cli/: Cargo.toml
tools/cli/src/mentat_cli/: command_parser.rs  input.rs  lib.rs  repl.rs
transaction/: Cargo.toml
transaction/src/: lib.rs  query.rs
