[package]
name = "mentat_core"
version = "0.0.1"
workspace = ".."

[dependencies]
enum-set = "0.0.7"
indexmap = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.thiserror]
workspace = true

[dependencies.ordered-float]
version = "0.5"
features = ["serde"]

[dependencies.uuid]
version = "0.5"
features = [
    "v4",
    "serde",
]

[dependencies.core_traits]
path = "../core-traits"

[dependencies.edn]
path = "../edn"
features = ["serde_support"]
