[package]
name = "db_traits"
version = "0.0.1"
workspace = ".."

[lib]
name = "db_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies.thiserror]
workspace = true

[dependencies.edn]
path = "../edn"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.rusqlite]
workspace = true
features = ["limits"]
