[package]
name = "mentat_sql"
version = "0.0.1"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
ordered-float = "0.5"

[dependencies.thiserror]
workspace = true

[dependencies.rusqlite]
workspace = true
features = ["limits"]

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_core]
path = "../core"

[dependencies.sql_traits]
path = "../sql-traits"
