[package]
name = "tolstoy_traits"
version = "0.0.1"
workspace = ".."
edition = "2024"

[lib]
name = "tolstoy_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
hyper = "0.11"
serde_json = "1.0"

[dependencies.thiserror]
workspace = true

[dependencies.uuid]
version = "0.5"

[dependencies.db_traits]
path = "../db-traits"

[dependencies.rusqlite]
workspace = true
features = ["limits"]
